# admintui

./: .env  .gitignore  Cargo.toml  README.md  crontab  docker-compose.yml  rustfmt.toml
docker/: .env  build_rust_app.sh  docker-compose.build.yml  docker-compose.test.yml
src/: app.rs  config.rs  cron.rs  log.rs  main.rs  menu.rs
src/cron/: cron.rs  edit.rs  mod.rs  styles.rs  utils.rs
src/ftp/: ftp.rs  mod.rs  styles.rs
src/menu/: menu.rs  mod.rs  styles.rs
src/mysql/: mod.rs  mysql.rs  styles.rs
