[package]
name = "tuixel"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
chrono = "0.4.39"
chrono-tz = "0.10.1"
color-eyre = "0.6.3"
cron-descriptor = "=0.1.1"
cron-parser = "0.10.0"
directories = "6.0.0"
lazy_static = "1.5.0"
ratatui = "0.29.0"
regex = "1.11.1"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-big-text = "0.7.1"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
